# Android-Mem-Kit

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: build.yml
docs/: MIGRATION.md  RECIPES.md  SECURITY_RESEARCH.md  USAGE.md
examples/: main.c
include/: memkit.h
src/: dl_callbacks.c  hooking.c  hooking_flags.c  il2cpp.c  intercept.c  memory.c  records.c  runtime_config.c  shadowhook_override.c
